--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
